--- a/WebShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/WebShop.WebUI/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                         <li><a href="#">My Account</a></li>
                         <li><a href="cart.html">My Basket</a></li>
                         <li><a href="checkout.html">Checkout</a></li>
-                        <li>@Html.ActionLink("Login", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Login", "Index", "User")</li>
                     </ul>
 				</div>
 			</div>
@@ -95,7 +95,8 @@
                     <ul class="nav">
                         <li><a href="./index.html">Homepage</a></li>
                         <li><a href="./about.html">About Us</a></li>
-                        <li><a href="./contact.html">Contac Us</a></li>
+                       
+                        <li>@Html.ActionLink("Contact Us", "Contact", "Home")</li>
                         <li><a href="./cart.html">Your Cart</a></li>
                         <li><a href="/register.chtml">Login</a></li>
                     </ul>
