--- a/WebShop.WebUI/Views/Home/Contact.cshtml
+++ b/WebShop.WebUI/Views/Home/Contact.cshtml
@@ -3,11 +3,8 @@
     <iframe width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=stockholm%20city&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
 </section>       
 
-
-
-
         <section class="header_text sub">
-            <img class="pageBanner" src="/themes/images/pageBanner.png" alt="New products">
+            <img class="pageBanner" src="~/Content/images/banner/pageBanner.png" alt="New products">
             <h4><span>Contact Us</span></h4>
         </section>
         <section class="main-content">
@@ -17,7 +14,7 @@
                         <h5>ADDITIONAL INFORMATION</h5>
                         <p>
                             <strong>Phone:</strong>&nbsp;(123) 456-7890<br>
-                            <strong>Fax:</strong>&nbsp;+04 (123) 456-7890<br>
+                            <strong>Fax:</strong>&nbsp;+07 (123) 456-7890<br>
                             <strong>Email:</strong>&nbsp;<a href="#">webShop@yahoo.com</a>
                         </p>
                         <br />
