--- a/WebShop.WebUI/Views/User/Index.cshtml
+++ b/WebShop.WebUI/Views/User/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <section class="header_text sub">
-    <img class="pageBanner" src="themes/images/pageBanner.png" alt="New products">
+    <img class="pageBanner" src="~/Content/images/banner/pageBanner.png" alt="New products">
     <h4><span>Login or Regsiter</span></h4>
 </section>
 <section class="main-content">
