--- a/WebShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/WebShop.WebUI/Views/Shared/_Layout.cshtml
@@ -93,12 +93,11 @@
                 <div class="span3">
                     <h4>Navigation</h4>
                     <ul class="nav">
-                        <li><a href="./index.html">Homepage</a></li>
+                        <li>@Html.ActionLink("Homepage", "Index", "Home")</li>
                         <li><a href="./about.html">About Us</a></li>
-                       
                         <li>@Html.ActionLink("Contact Us", "Contact", "Home")</li>
                         <li><a href="./cart.html">Your Cart</a></li>
-                        <li><a href="/register.chtml">Login</a></li>
+
                     </ul>
                 </div>
                 <div class="span4">
@@ -112,7 +111,6 @@
                 </div>
                 <div class="span5">
                     <p class="logo"><img src="themes/images/logo.png" class="site_logo" alt=""></p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. the  Lorem Ipsum has been the industry's standard dummy text ever since the you.</p>
                     <br />
                     <span class="social_icons">
                         <a class="facebook" href="#">Facebook</a>
