--- a/WebShop.WebUI/Views/Home/Index.cshtml
+++ b/WebShop.WebUI/Views/Home/Index.cshtml
@@ -20,8 +20,8 @@
 	</div>
 </section>
 <section class="header_text">
-	We stand for top quality templates. Our genuine developers always optimized bootstrap commercial templates. 
-	<br/>Don't miss to use our cheap abd best bootstrap templates.
+	It is now winter and we are ready to enjoy all outdoors activities.  For you who feel cold, we have a special selection of extremly warm clothing without putting aside out signature fasion.
+	<br/>Come and enjoy our new eCommerce site.  You will find all what you need for this season.
 </section>
 <section class="main-content">
 	<div class="row">
@@ -29,7 +29,7 @@
 			<div class="row">
 				<div class="span12">
 					<h4 class="title">
-						<span class="pull-left"><span class="text"><span class="line">Feature <strong>Products</strong></span></span></span>
+						<span class="pull-left"><span class="text"><span class="line">Suggested <strong>Products</strong></span></span></span>
 						<span class="pull-right">
 							<a class="left button" href="#myCarousel" data-slide="prev"></a><a class="right button" href="#myCarousel" data-slide="next"></a>
 						</span>
@@ -38,6 +38,7 @@
 						<div class="carousel-inner">
 							<div class="active item">
 								<ul class="thumbnails">
+@{ /* Suggested Products (4 products) * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */ }
 									<li class="span3">
 										<div class="product-box">
 											<span class="sale_tag"></span>
@@ -47,67 +48,12 @@
 											<p class="price">$17.25</p>
 										</div>
 									</li>
-									<li class="span3">
-										<div class="product-box">
-											<span class="sale_tag"></span>
-											<p><a href="product_detail.html"><img src="themes/images/ladies/2.jpg" alt="" /></a></p>
-											<a href="product_detail.html" class="title">Quis nostrud exerci tation</a><br/>
-											<a href="products.html" class="category">Quis nostrud</a>
-											<p class="price">$32.50</p>
-										</div>
-									</li>
-									<li class="span3">
-										<div class="product-box">
-											<p><a href="product_detail.html"><img src="themes/images/ladies/3.jpg" alt="" /></a></p>
-											<a href="product_detail.html" class="title">Know exactly turned</a><br/>
-											<a href="products.html" class="category">Quis nostrud</a>
-											<p class="price">$14.20</p>
-										</div>
-									</li>
-									<li class="span3">
-										<div class="product-box">
-											<p><a href="product_detail.html"><img src="themes/images/ladies/4.jpg" alt="" /></a></p>
-											<a href="product_detail.html" class="title">You think fast</a><br/>
-											<a href="products.html" class="category">World once</a>
-											<p class="price">$31.45</p>
-										</div>
-									</li>
+@{ /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */ }
 								</ul>
 							</div>
 							<div class="item">
 								<ul class="thumbnails">
-									<li class="span3">
-										<div class="product-box">
-											<p><a href="product_detail.html"><img src="themes/images/ladies/5.jpg" alt="" /></a></p>
-											<a href="product_detail.html" class="title">Know exactly</a><br/>
-											<a href="products.html" class="category">Quis nostrud</a>
-											<p class="price">$22.30</p>
-										</div>
-									</li>
-									<li class="span3">
-										<div class="product-box">
-											<p><a href="product_detail.html"><img src="themes/images/ladies/6.jpg" alt="" /></a></p>
-											<a href="product_detail.html" class="title">Ut wisi enim ad</a><br/>
-											<a href="products.html" class="category">Commodo consequat</a>
-											<p class="price">$40.25</p>
-										</div>
-									</li>
-									<li class="span3">
-										<div class="product-box">
-											<p><a href="product_detail.html"><img src="themes/images/ladies/7.jpg" alt="" /></a></p>
-											<a href="product_detail.html" class="title">You think water</a><br/>
-											<a href="products.html" class="category">World once</a>
-											<p class="price">$10.45</p>
-										</div>
-									</li>
-									<li class="span3">
-										<div class="product-box">
-											<p><a href="product_detail.html"><img src="themes/images/ladies/8.jpg" alt="" /></a></p>
-											<a href="product_detail.html" class="title">Quis nostrud exerci</a><br/>
-											<a href="products.html" class="category">Quis nostrud</a>
-											<p class="price">$35.50</p>
-										</div>
-									</li>
+@{ /* Suggested Products (4 products) * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */ }
 								</ul>
 							</div>
 						</div>
@@ -127,6 +73,7 @@
 						<div class="carousel-inner">
 							<div class="active item">
 								<ul class="thumbnails">
+@{ /* Latest Products (4 products) * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */ }
 									<li class="span3">
 										<div class="product-box">
 											<span class="sale_tag"></span>
@@ -136,66 +83,12 @@
 											<p class="price">$25.50</p>
 										</div>
 									</li>
-									<li class="span3">
-										<div class="product-box">
-											<p><a href="product_detail.html"><img src="themes/images/cloth/bootstrap-women-ware1.jpg" alt="" /></a></p>
-											<a href="product_detail.html" class="title">Quis nostrud exerci tation</a><br/>
-											<a href="products.html" class="category">Quis nostrud</a>
-											<p class="price">$17.55</p>
-										</div>
-									</li>
-									<li class="span3">
-										<div class="product-box">
-											<p><a href="product_detail.html"><img src="themes/images/cloth/bootstrap-women-ware6.jpg" alt="" /></a></p>
-											<a href="product_detail.html" class="title">Know exactly turned</a><br/>
-											<a href="products.html" class="category">Quis nostrud</a>
-											<p class="price">$25.30</p>
-										</div>
-									</li>
-									<li class="span3">
-										<div class="product-box">
-											<p><a href="product_detail.html"><img src="themes/images/cloth/bootstrap-women-ware5.jpg" alt="" /></a></p>
-											<a href="product_detail.html" class="title">You think fast</a><br/>
-											<a href="products.html" class="category">World once</a>
-											<p class="price">$25.60</p>
-										</div>
-									</li>
+@{ /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */ }
 								</ul>
 							</div>
 							<div class="item">
 								<ul class="thumbnails">
-									<li class="span3">
-										<div class="product-box">
-											<p><a href="product_detail.html"><img src="themes/images/cloth/bootstrap-women-ware4.jpg" alt="" /></a></p>
-											<a href="product_detail.html" class="title">Know exactly</a><br/>
-											<a href="products.html" class="category">Quis nostrud</a>
-											<p class="price">$45.50</p>
-										</div>
-									</li>
-									<li class="span3">
-										<div class="product-box">
-											<p><a href="product_detail.html"><img src="themes/images/cloth/bootstrap-women-ware3.jpg" alt="" /></a></p>
-											<a href="product_detail.html" class="title">Ut wisi enim ad</a><br/>
-											<a href="products.html" class="category">Commodo consequat</a>
-											<p class="price">$33.50</p>
-										</div>
-									</li>
-									<li class="span3">
-										<div class="product-box">
-											<p><a href="product_detail.html"><img src="themes/images/cloth/bootstrap-women-ware2.jpg" alt="" /></a></p>
-											<a href="product_detail.html" class="title">You think water</a><br/>
-											<a href="products.html" class="category">World once</a>
-											<p class="price">$45.30</p>
-										</div>
-									</li>
-									<li class="span3">
-										<div class="product-box">
-											<p><a href="product_detail.html"><img src="themes/images/cloth/bootstrap-women-ware1.jpg" alt="" /></a></p>
-											<a href="product_detail.html" class="title">Quis nostrud exerci</a><br/>
-											<a href="products.html" class="category">Quis nostrud</a>
-											<p class="price">$25.20</p>
-										</div>
-									</li>
+@{ /* Latest Products (4 products) * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */ }
 								</ul>
 							</div>
 						</div>
@@ -207,8 +100,8 @@
 					<div class="service">
 						<div class="responsive">
 							<img src="/Content/themes/images/feature_img_2.png" alt="" />
-							<h4>MODERN <strong>DESIGN</strong></h4>
-							<p>Lorem Ipsum is simply dummy text of the printing and printing industry unknown printer.</p>
+							<h4>FASION <strong>FOR YOU</strong></h4>
+							<p>We work with exclusive brands and designers to fit your needs.</p>
 						</div>
 					</div>
 				</div>
@@ -217,7 +110,7 @@
 						<div class="customize">
 							<img src="/Content/themes/images/feature_img_1.png" alt="" />
 							<h4>FREE <strong>SHIPPING</strong></h4>
-							<p>Lorem Ipsum is simply dummy text of the printing and printing industry unknown printer.</p>
+							<p>We provide free shipping for all your products within Sweden.  Deliveries arrive to your home via Postnord.</p>
 						</div>
 					</div>
 				</div>
@@ -226,7 +119,7 @@
 						<div class="support">
 							<img src="/Content/themes/images/feature_img_3.png" alt="" />
 							<h4>24/7 LIVE <strong>SUPPORT</strong></h4>
-							<p>Lorem Ipsum is simply dummy text of the printing and printing industry unknown printer.</p>
+							<p>We are commited to your experience and satisfaction. If you have any problem, contact our dedicated customer support team.</p>
 						</div>
 					</div>
 				</div>
@@ -236,26 +129,26 @@
 </section>
 <section class="our_client">
 	<h4 class="title"><span class="text">Manufactures</span></h4>
-	<div class="row">
-		<div class="span2">
-			<a href="#"><img alt="" src="themes/images/clients/14.png"></a>
-		</div>
-		<div class="span2">
-			<a href="#"><img alt="" src="themes/images/clients/35.png"></a>
-		</div>
-		<div class="span2">
-			<a href="#"><img alt="" src="themes/images/clients/1.png"></a>
-		</div>
-		<div class="span2">
-			<a href="#"><img alt="" src="themes/images/clients/2.png"></a>
-		</div>
-		<div class="span2">
-			<a href="#"><img alt="" src="themes/images/clients/3.png"></a>
-		</div>
-		<div class="span2">
-			<a href="#"><img alt="" src="themes/images/clients/4.png"></a>
-		</div>
-	</div>
+    <div class="row">
+        <div class="span2">
+            <img alt="Bench." src="~/Content/brands/bench.png">
+        </div>
+        <div class="span2">
+            <img alt="Doite" src="~/Content/brands/doite.png">
+        </div>
+        <div class="span2">
+            <img alt="Hi-Tec." src="~/Content/brands/hi-tec.png">
+        </div>
+        <div class="span2">
+            <img alt="Kathmandu" src="~/Content/brands/kathmandu.png">
+        </div>
+        <div class="span2">
+            <img alt="Maui and Sons" src="~/Content/brands/maui.png">
+        </div>
+        <div class="span2">
+            <img alt="Mossimo" src="~/Content/brands/mossimo.png">
+        </div>
+    </div>
 </section>
 
 
