--- a/WebShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/WebShop.WebUI/Views/Shared/_Layout.cshtml
@@ -64,22 +64,24 @@
                         <li>
                             <a href="./products.html">Woman</a>
                             <ul>
-                                <li><a href="./products.html">Lacinia nibh</a></li>
-                                <li><a href="./products.html">Eget molestie</a></li>
-                                <li><a href="./products.html">Varius purus</a></li>
+                                <li><a href="./products.html">Accessories</a></li>
+                                <li><a href="./products.html">Handbags</a></li>
+                                <li><a href="./products.html">Shirts</a></li>
+                                <li><a href="./products.html">Pants</a></li>
+                                <li><a href="./products.html">Pijamas</a></li>
+                                <li><a href="./products.html">Shoes</a></li>
                             </ul>
                         </li>
                         <li><a href="./products.html">Man</a></li>
                         <li>
                             <a href="./products.html">Sport</a>
                             <ul>
-                                <li><a href="./products.html">Gifts and Tech</a></li>
-                                <li><a href="./products.html">Ties and Hats</a></li>
-                                <li><a href="./products.html">Cold Weather</a></li>
+                                <li><a href="./products.html">Running</a></li>
+                                <li><a href="./products.html">Yoga</a></li>
+                                <li><a href="./products.html">Ski</a></li>
                             </ul>
                         </li>
                         <li><a href="./products.html">Hangbag</a></li>
-                        <li><a href="./products.html">Best Seller</a></li>
                         <li><a href="./products.html">Top Seller</a></li>
                     </ul>
                 </nav>
@@ -110,8 +112,8 @@
                     </ul>
                 </div>
                 <div class="span5">
-                    <p class="logo"><img src="themes/images/logo.png" class="site_logo" alt=""></p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. the  Lorem Ipsum has been the industry's standard dummy text ever since the you.</p>
+                    <p class="logo"><img src="/Content/themes/images/logo.png" class="site_logo" alt=""></p>
+                    <p>WebShop is our new webplatform for RealShop.  Don't miss the experience of getting your best products from us.</p>
                     <br />
                     <span class="social_icons">
                         <a class="facebook" href="#">Facebook</a>
@@ -123,7 +125,7 @@
             </div>
         </section>
         <section id="copyright">
-            <span>Copyright 2013 bootstrappage template  All right reserved.</span>
+            <span>Copyright 2021 WebShop AB All right reserved.</span>
         </section>
     </div>
 
