--- a/WebShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/WebShop.WebUI/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
 		
 	<!-- global styles -->
 	<link href="/Content/themes/css/flexslider.css" rel="stylesheet"/>
+    <link href="/Content/themes/css/jquery.fancybox.css" rel="stylesheet"/>
 	<link href="/Content/themes/css/main.css" rel="stylesheet"/>
 
 	<!-- scripts -->
@@ -22,6 +23,7 @@
 	<script src="/Content/bootstrap/js/bootstrap.min.js"></script>
 	<script src="/Content/themes/js/superfish.js"></script>	
 	<script src="/Content/themes/js/jquery.scrolltotop.js"></script>
+    <script src="/Content/themes/js/jquery.fancybox.js"></script>
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<script src="js/respond.min.js"></script>
