--- a/WebShop.WebUI/Views/User/Index.cshtml
+++ b/WebShop.WebUI/Views/User/Index.cshtml
@@ -1,67 +1,57 @@
-﻿
-<section class="header_text sub">
-    <img class="pageBanner" src="~/Content/images/banner/pageBanner.png" alt="New products">
-    <h4><span>Login or Regsiter</span></h4>
-</section>
-<section class="main-content">
-    <div class="row">
-        <div class="span5">
-            <h4 class="title"><span class="text"><strong>Login</strong> Form</span></h4>
-            <form action="#" method="post">
-                <input type="hidden" name="next" value="/">
-                <fieldset>
-                    <div class="control-group">
-                        <label class="control-label">Username</label>
-                        <div class="controls">
-                            <input type="text" placeholder="Enter your username" id="username" class="input-xlarge">
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <label class="control-label">Username</label>
-                        <div class="controls">
-                            <input type="password" placeholder="Enter your password" id="password" class="input-xlarge">
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <input tabindex="3" class="btn btn-inverse large" type="submit" value="Sign into your account">
-                        <hr>
-                        <p class="reset">Recover your <a tabindex="4" href="#" title="Recover your username or password">username or password</a></p>
-                    </div>
-                </fieldset>
-            </form>
-        </div>
-        <div class="span7">
-            <h4 class="title"><span class="text"><strong>Register</strong> Form</span></h4>
-            <form action="#" method="post" class="form-stacked">
-                <fieldset>
-                    <div class="control-group">
-                        <label class="control-label">Username</label>
-                        <div class="controls">
-                            <input type="text" placeholder="Enter your username" class="input-xlarge">
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <label class="control-label">Email address:</label>
-                        <div class="controls">
-                            <input type="password" placeholder="Enter your email" class="input-xlarge">
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <label class="control-label">Password:</label>
-                        <div class="controls">
-                            <input type="password" placeholder="Enter your password" class="input-xlarge">
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <p>Now that we know who you are. I'm not a mistake! In a comic, you know how you can tell who the arch-villain's going to be?</p>
-                    </div>
-                    <hr>
-                    <div class="actions"><input tabindex="9" class="btn btn-inverse large" type="submit" value="Create your account"></div>
-                </fieldset>
-            </form>
-        </div>
-    </div>
-</section>
+﻿@model IEnumerable<WebShop.Core.Models.UserAccount>
 
+@{
+    ViewBag.Title = "Index1";
+}
 
+<h2>Index1</h2>
 
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.CreateAt)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.UserId)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.UserName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Password)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Email)
+        </th>
+        <th></th>
+    </tr>
+
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.CreateAt)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.UserId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.UserName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Password)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Email)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+        </td>
+    </tr>
+}
+
+</table>
