changed to sql express, fixed model

--- a/WebShop.WebUI/Views/ProductDetails/Index.cshtml
+++ b/WebShop.WebUI/Views/ProductDetails/Index.cshtml
@@ -33,7 +33,7 @@
                         <address>
                             @if (@Model.Manufacture != null)
                             {
-                                <strong>Brand:</strong> <span>@Model.Manufacture.Name</span><br>
+                                <strong>Brand:</strong> <span>@Model.Manufacture</span><br>
                             }
                             <strong>Product Code:</strong> <span>@Model.Id</span><br>
                             @if (@Model.Availability == 0)
