Added size and colour as comma seperated String to Model

--- a/WebShop.WebUI/Views/ProductDetails/Index.cshtml
+++ b/WebShop.WebUI/Views/ProductDetails/Index.cshtml
@@ -70,11 +70,11 @@
                                     <tbody>
                                         <tr class="">
                                             <th>Size</th>
-                                            <td>Large, Medium, Small, X-Large</td>
+                                            <td>@Model.Size</td>
                                         </tr>
                                         <tr class="alt">
                                             <th>Colour</th>
-                                            <td>Orange, Yellow</td>
+                                            <td>@Model.Colour</td>
                                         </tr>
                                     </tbody>
                                 </table>
