Create Login and registration

--- a/WebShop.WebUI/Views/User/Create.cshtml
+++ b/WebShop.WebUI/Views/User/Create.cshtml
@@ -23,7 +23,7 @@
                         <div class="control-group">
                             <label class="control-label">Username</label>
                             <div class="controls">
-                                <input type="password" placeholder="Enter your password" id="password" name="Password" class="input-xlarge">
+                                <input type="text" placeholder="Enter your password" id="password" name="Password" class="input-xlarge">
                             </div>
                         </div>
                         <div class="control-group">
@@ -46,15 +46,10 @@
                         <div class="control-group">
                             <label class="control-label">Username</label>
                             <div class="controls">
-                                <input type="text" placeholder="Enter your username"  name="UserName" class="input-xlarge">
+                                <input type="text" placeholder="Enter your username" name="UserName" class="input-xlarge">
                             </div>
                         </div>
-                        <div class="control-group">
-                            <label class="control-label">Email address:</label>
-                            <div class="controls">
-                                <input type="password" placeholder="Enter your email" name="Email" class="input-xlarge">
-                            </div>
-                        </div>
+
                         <div class="control-group">
                             <label class="control-label">Password:</label>
                             <div class="controls">
@@ -62,8 +57,12 @@
                             </div>
                         </div>
                         <div class="control-group">
-                            <p>Now that we know who you are. I'm not a mistake! In a comic, you know how you can tell who the arch-villain's going to be?</p>
+                            <label class="control-label">Email address:</label>
+                            <div class="controls">
+                                <input type="text" placeholder="Enter your email" name="Email" class="input-xlarge">
+                            </div>
                         </div>
+
                         <hr>
                         <div class="actions"><input tabindex="9" class="btn btn-inverse large" type="submit" value="Create your account"></div>
                     </fieldset>
