--- a/WebShop.WebUI/Views/User/Create.cshtml
+++ b/WebShop.WebUI/Views/User/Create.cshtml
@@ -21,7 +21,7 @@
                             </div>
                         </div>
                         <div class="control-group">
-                            <label class="control-label">Username</label>
+                            <label class="control-label">Password</label>
                             <div class="controls">
                                 <input type="text" placeholder="Enter your password" id="password" name="Password" class="input-xlarge">
                             </div>
