--- a/WebShop.WebUI/Content/themes/css/main.css
+++ b/WebShop.WebUI/Content/themes/css/main.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:regular,italic,bold");
 
 /* common
@@ -776,3 +776,4 @@ section.our_client .row{
 		border-bottom:1px solid #eee;
 	}
 }
+
