--- a/WebShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/WebShop.WebUI/Views/Shared/_Layout.cshtml
@@ -17,6 +17,8 @@
 	<link href="/Content/themes/css/flexslider.css" rel="stylesheet"/>
     <link href="/Content/themes/css/jquery.fancybox.css" rel="stylesheet"/>
 	<link href="/Content/themes/css/main.css" rel="stylesheet"/>
+	<link href="~/Content/themes/fontawesome-5/css/all.min.css" rel="stylesheet"/>
+	<link href="~/Content/themes/css/review.css" rel="stylesheet"/>
 
 	<!-- scripts -->
 	<script src="/Content/themes/js/jquery-1.7.2.min.js"></script>
@@ -24,6 +26,7 @@
 	<script src="/Content/themes/js/superfish.js"></script>	
 	<script src="/Content/themes/js/jquery.scrolltotop.js"></script>
     <script src="/Content/themes/js/jquery.fancybox.js"></script>
+    <script src="~/Content/themes/js/review.js"></script>
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<script src="js/respond.min.js"></script>
