--- a/WebShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/WebShop.WebUI/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+    @RenderSection("scripts", required: false)
     <meta charset="utf-8" />
     <title>@ViewBag.Title - WebShop eCommerce</title>
 
@@ -49,9 +50,9 @@
                         <li><a href="#">My Account</a></li>
                         <li><a href="cart.html">My Basket</a></li>
                         <li><a href="checkout.html">Checkout</a></li>
-                       
-                        <li>@Html.ActionLink("Login", "Index", "User")</li>
-                    </ul>
+
+                        <li> @Html.Partial("_LoginPartial")</li>
+                 </ul>
 				</div>
 			</div>
 		</div>
