--- a/WebShop.WebUI/Views/ProductDetails/Index.cshtml
+++ b/WebShop.WebUI/Views/ProductDetails/Index.cshtml
@@ -206,22 +206,28 @@
                                                     <a class="btn btn-success btn-green" href="#reviews-anchor" id="open-review-box">Leave a Review</a>
                                                 </div>
 
-                                                <div class="row" id="post-review-box" style="display:none;">
-                                                    <div class="span7">
-                                                        <form accept-charset="UTF-8" action="" method="post">
-                                                            <input id="ratings-hidden" name="rating" type="hidden">
-                                                            <textarea class="form-control animated" cols="100" id="new-review" name="comment" placeholder="Enter your review here..." rows="5" style="width:100%"></textarea>
+                                                @*posting review*@
+                                                @using (Html.BeginForm("UpdateReview", "ProductDetails", FormMethod.Post, new { encType = "multipart/form-data" }))
+                                                {
 
-                                                            <div class="text-right">
-                                                                <div class="stars starrr" data-rating="0"></div>
-                                                                <a class="btn btn-danger btn-sm" href="#" id="close-review-box" style="display:none; margin-right: 10px;">
-                                                                    <span class="glyphicon glyphicon-remove"></span>Cancel
-                                                                </a>
-                                                                <button class="btn btn-success btn-lg" type="submit">Save</button>
-                                                            </div>
-                                                        </form>
+                                                }
+                                                    <div class="row" id="post-review-box" style="display:none;">
+                                                        <div class="span7">
+                                                            <form accept-charset="UTF-8" action="" method="post">
+                                                                <input id="ratings-hidden" name="rating" type="hidden">
+                                                                <textarea class="form-control animated" cols="100" id="new-review" name="comment" placeholder="Enter your review here..." rows="5" style="width:100%"></textarea>
+
+                                                                <div class="text-right">
+                                                                    <div class="stars starrr" data-rating="0"></div>
+                                                                    <a class="btn btn-danger btn-sm" href="#" id="close-review-box" style="display:none; margin-right: 10px;">
+                                                                        <span class="glyphicon glyphicon-remove"></span>Cancel
+                                                                    </a>
+                                                                    <button class="btn btn-success btn-lg" type="submit">Save</button>
+                                                                </div>
+                                                            </form>
+                                                        </div>
                                                     </div>
-                                                </div>
+
                                             </div>
 
                                         </div>
