--- a/WebShop.WebUI/Views/Account/Login.cshtml
+++ b/WebShop.WebUI/Views/Account/Login.cshtml
@@ -1,10 +1,6 @@
 ﻿@using WebShop.WebUI.Models
 @model LoginViewModel
-@{
-    ViewBag.Title = "Log in";
-}
 
-<h2>@ViewBag.Title.</h2>
 
 <section class="header_text sub">
     <img class="pageBanner" src="~/Content/images/banner/pageBanner.png" alt="New products">
@@ -19,49 +15,53 @@
             <div class="row">
                 <div class="span5">
                     <section id="main-content">
-                        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-stacked", role = "form" }))
                         {
                             @Html.AntiForgeryToken()
-                                            <h4>Use a local account to log in.</h4>
+                                            
                                                             <hr />
                                                                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                                                                            <div class="form-group">
+
+
+                                                                                             
+
+                                                                                            <div class="control-group">
                                                                                                 @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                                                                                                <div class="col-md-10">
-                                                                                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                                                                                                <div class="controls">
+                                                                                                    @Html.TextBoxFor(m => m.Email, new { @class = "input-xlarge" })
                                                                                                     @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                                                                                                 </div>
                                                                                             </div>
-                                                                                                            <div class="form-group">
+                                                                                                            <div class="control-group">
                                                                                                                 @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                                                                                                                <div class="col-md-10">
-                                                                                                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                                                                                                <div class="controls">
+                                                                                                                    @Html.PasswordFor(m => m.Password, new { @class = "input-xlarge" })
                                                                                                                     @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                                                                                                                 </div>
                                                                                                             </div>
-                                                                                                                            <div class="form-group">
+                                                                                                                            <div class="control-group">
                                                                                                                                 <div class="col-md-offset-2 col-md-10">
-                                                                                                                                    <div class="checkbox">
+
+                                                                                                                                    <div class="controls">
                                                                                                                                         @Html.CheckBoxFor(m => m.RememberMe)
-                                                                                                                                        @Html.LabelFor(m => m.RememberMe)
+
                                                                                                                                     </div>
+                                                                                                                                    @Html.LabelFor(m => m.RememberMe)
                                                                                                                                 </div>
                                                                                                                             </div>
                                                                                                                                             <div class="form-group">
-                                                                                                                                                <div class="col-md-offset-2 col-md-10">
-                                                                                                                                                    <input type="submit" value="Log in" class="btn btn-default" />
+                                                                                                                                                <div class="controls">
+                                                                                                                                                    <input type="submit" value="Log in" class="btn btn-inverse large" />
+                                                                                                                                                    @Html.ActionLink("Register as a new user", "Register")
                                                                                                                                                 </div>
                                                                                                                                             </div> <p>
-                                                                                                                                                @Html.ActionLink("Register as a new user", "Register")
+                                                                                                                                              
                                                                                                                                             </p>
 
                                                                                                                                         }
                     </section>
                 </div>
-                <div class="col-md-4">
-                    
-                    
-                </div>
+              
             </div>
 
             @section Scripts {
