--- a/WebShop.WebUI/Views/Basket/Index.cshtml
+++ b/WebShop.WebUI/Views/Basket/Index.cshtml
@@ -1,10 +1,9 @@
-﻿@model IEnumerable<WebShop.Core.Models.ProductCart>
+﻿@model IEnumerable<WebShop.Core.ViewModels.BasketItemViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Basket";
 }
 
-<h2>Index</h2>
 <section class="header_text sub">
     <img class="pageBanner" src="~/Content/images/banner/banner-2.jpg" alt="">
     <h4><span>Shopping Cart</span></h4>
@@ -25,37 +24,24 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td><input type="checkbox" value="option1"></td>
-                        <td><a href="product_detail.html"><img alt="" src="themes/images/ladies/9.jpg"></a></td>
-                        <td>Fusce id molestie massa</td>
-                        <td><input type="text" placeholder="1" class="input-mini"></td>
-                        <td>$2,350.00</td>
-                        <td>$2,350.00</td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox" value="option1"></td>
-                        <td><a href="product_detail.html"><img alt="" src="themes/images/ladies/1.jpg"></a></td>
-                        <td>Luctus quam ultrices rutrum</td>
-                        <td><input type="text" placeholder="2" class="input-mini"></td>
-                        <td>$1,150.00</td>
-                        <td>$2,450.00</td>
-                    </tr>
-                    <tr>
-                        <td><input type="checkbox" value="option1"></td>
-                        <td><a href="product_detail.html"><img alt="" src="themes/images/ladies/3.jpg"></a></td>
-                        <td>Wuam ultrices rutrum</td>
-                        <td><input type="text" placeholder="1" class="input-mini"></td>
-                        <td>$1,210.00</td>
-                        <td>$1,123.00</td>
-                    </tr>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td><a href="@Url.Action("RemoveFromBasket", "Basket", new { Id=item.Id })" class="btn btn-danger"><i class="fas fa-trash-alt"></i></a></td>
+                            <td><a href="/ProductDetails/index/@item.Id"><img  class="img-thumbnail" alt="" width="50px" src="@item.Image"></a></td>
+                            <td>@item.ProdctName</td>
+                            <td><input type="text" placeholder="@item.Quantity" class="input-mini"></td>
+                            <td>@item.Price Kr</td>
+                            <td>@(@item.Price * @item.Quantity) Kr</td>
+                        </tr>
+                    }
                     <tr>
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
-                        <td><strong>$3,600.00</strong></td>
+                        <td><strong>@String.Format("{0:#.00}", (from p in Model select p.Price * p.Quantity).Sum()) Kr</strong></td>
                     </tr>
                 </tbody>
             </table>
