Login Authentication Added Style Change is Added

--- a/WebShop.WebUI/Views/Account/Register.cshtml
+++ b/WebShop.WebUI/Views/Account/Register.cshtml
@@ -18,7 +18,7 @@
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
     <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
+    @Html.ValidationSummary("", new { @style = "color: red" })
 
     <div class="form-group">
         @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
@@ -67,7 +67,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-inverse large" value="Register" />
+            <input type="submit" class="btn btn-success " value="Register" />
         </div>
     </div>}
 
