--- a/WebShop.WebUI/Views/Account/Login.cshtml
+++ b/WebShop.WebUI/Views/Account/Login.cshtml
@@ -20,9 +20,9 @@
                 @Html.AntiForgeryToken()
 
                 <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.ValidationSummary(true, "", new { @style = "color: red" })
 
-
+               
 
 
                 <div class="control-group">
@@ -78,7 +78,7 @@
 <script type="text/javascript">
 
 
-    $('#login').on('click', function (e) {
+    $('#login1').on('click', function (e) {
         e.preventDefault();
         var form = $(this).parents('form');
         swal({
