--- a/WebShop.WebUI/Views/Account/Register.cshtml
+++ b/WebShop.WebUI/Views/Account/Register.cshtml
@@ -10,7 +10,7 @@
 
 </section>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new {  @class = "form-stacked", role = "form" }))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-stacked", role = "form" }))
 {
 
 
@@ -64,6 +64,13 @@
         </div>
     </div>
 
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.MembershipTypeId, "MembershipTypeId", htmlAttributes: new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(m => m.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), new { @class = "form-control" })
+        </div>
+    </div>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
