--- a/WebShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/WebShop.WebUI/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                     <ul class="user-menu">
                         <li><a href="#">My Account</a></li>
                         <li><a href="/Basket/Index">My Basket</a></li>
-                        <li><a href="/Cart/Index">Checkout</a></li>
+                        <li><a href="/Checkout/Index">Checkout</a></li>
                         <li>@Html.ActionLink("Login", "Index", "User")</li>
                         @{
                             Html.RenderAction("BasketSummary", "Basket");
