--- a/WebShop.WebUI/Views/Basket/Index.cshtml
+++ b/WebShop.WebUI/Views/Basket/Index.cshtml
@@ -57,8 +57,6 @@
                             <td>-@Model.DiscountItem.Price Kr</td>
                         </tr>
                     }
-                    @if (Model.DeliveryMethod.Price != 0)
-                    {
                         <tr>
                             <td>&nbsp;</td>
                             <td>&nbsp;</td>
@@ -67,7 +65,6 @@
                             <td>&nbsp;</td>
                             <td>@Model.DeliveryMethod.Price Kr</td>
                         </tr>
-                    }
                     @{
                         var total = (from p in Model.BasketItemDetail select p.Price * p.Quantity).Sum();
                         if (Model.DiscountItem != null)
@@ -125,7 +122,7 @@
                     <p class="buttons center">
                         @*<button class="btn" type="button">Update</button>*@
                         <a href="/Product/Index" class="btn" type="button">Continue shopping</a>
-                        <button class="btn btn-inverse" type="submit" id="checkout">Checkout</button>
+                        <a href="/Checkout/Index" class="btn btn-inverse" type="submit" id="checkout">Checkout</a>
                     </p>
             </div>
         @{
